test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_20.k
schema Data:
    [str]: int
    
data = Data {
    key1: 1
    key2: "value"
}